--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
             Made with <i class="fa fa-heart"></i> using <a href="http://jekyllrb.com/">Jekyll</a>
         </div>
         <div class="right-column">
-            <i class="fa fa-code"></i> on <a href="https://github.com/MrAnnix/MrAnnix.github.io">Github</a> &nbsp;<i class="fa fa-github-alt"></i>
+            <i class="fa fa-code"></i> on <a href="https://github.com/dhrodao/dhrodao.github.io">Github</a> &nbsp;<i class="fa fa-github-alt"></i>
         </div>
     </div>
 </div>
