--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,11 +2,11 @@
     <!-- Basic page needs -->
     <meta charset="utf-8">
     <title>Daniel Hervás Rodao · Student</title>
-    <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | truncate: 110 }}{% elsif page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
-    <meta name="author" content="{{ site.author }}">
+    <meta name="description" content="Here I'll post my recent creations">
+    <meta name="author" content="Daniel Hervás Rodao">
     
     <!-- Open Graph -->
-    <meta property="og:title" content="{% if page.title == 'Home' %}{{ site.SEOtitle }}{% else %}{{ page.title }} · {{ site.title }}{% endif %}">
+    <meta property="og:title" content="Daniel Hervás Rodao · Student">
     <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | truncate: 110 }}{% elsif page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
     <meta property="og:image" content="{{ site.url }}{{ site.logo }}">
     <meta property="og:url" content="{{ site.url }}">
