--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
     
     <!-- Open Graph -->
     <meta property="og:title" content="Daniel Hervás Rodao · Student">
-    <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | truncate: 110 }}{% elsif page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
+    <meta property="og:description" content="Here I'll post my recent creations">
     <meta property="og:image" content="{{ site.url }}{{ site.logo }}">
     <meta property="og:url" content="{{ site.url }}">
     <meta property='og:type' {% if page %} content='article' {% else %} content="website" {% endif %}/>
