--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Daniel Hervás Rodao · Student">
     <meta property="og:description" content="Here I'll post my recent creations">
     <meta property="og:image" content="{{ site.url }}{{ site.logo }}">
-    <meta property="og:url" content="{{ site.url }}">
+    <meta property="og:url" content="https://dhrodao.github.io/">
     <meta property='og:type' {% if page %} content='article' {% else %} content="website" {% endif %}/>
 
     <!-- Feeds -->
