--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,8 +13,8 @@
     <meta property='og:type' {% if page %} content='article' {% else %} content="website" {% endif %}/>
 
     <!-- Feeds -->
-    <link rel="alternate" title="Daniel Hervás Rodao" type="application/atom+xml" href="{{ "/feed.xml" | absolute_url }}">
-    <link rel="alternate" title="Daniel Hervás Rodao" type="application/json" href="{{ "/feed.json" | absolute_url }}">
+    <link rel="alternate" title="Daniel Hervás Rodao (ATOM Feed)" type="application/atom+xml" href="{{ "/feed.xml" | absolute_url }}">
+    <link rel="alternate" title="Daniel Hervás Rodao (JSON Feed)" type="application/json" href="{{ "/feed.json" | absolute_url }}">
 
     {% if page.title == 'Home' and site.google-site-verification %}
     <!-- Google Site Verification -->
