--- a/_sass/_common.scss
+++ b/_sass/_common.scss
@@ -877,7 +877,7 @@ code,pre,tt {
     text-transform: uppercase;
     text-decoration: none;
     text-shadow: 0 1px #fff;
-    color: #c8463e;
+    color: #a572f4;
     font-family: moniker
 }
 
