--- a/_sass/_common.scss
+++ b/_sass/_common.scss
@@ -828,7 +828,7 @@ code,pre,tt {
     transition: background-position .3s;
     margin-top: 14px;
     margin-bottom: 24px;
-    border-bottom: 1px solid #bf8e82;
+    border-bottom: 1px solid #a572f4;
     background-image: linear-gradient(180deg,#fff,#fbefeb);
     background-repeat: no-repeat;
     background-position: 0 28px;
