--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -85,7 +85,7 @@
     display: inline;
     transition: color .3s;
     margin-bottom: 2px;
-    color: #c8463e
+    color: #a572f4
 }
 
 .recent-blog-posts h4:hover {
