--- a/_sass/_common.scss
+++ b/_sass/_common.scss
@@ -8,7 +8,7 @@
     text-transform: uppercase;
     font-family: moniker;
     font-size: 10pt;
-    color: #bf8e82;
+    color: #a572f4;
     font-family: bryant;
     font-size: 10pt;
     font-weight: 700
