--- a/_sass/_common.scss
+++ b/_sass/_common.scss
@@ -480,7 +480,7 @@ code,pre,tt {
     padding: 0 10px 0 10px;
     text-decoration: none;
     margin-bottom: 8px;
-    color: #cf5d56
+    color: #a572f4
 }
 
 .post-tags .tags-list a:hover {
