--- a/_sass/_common.scss
+++ b/_sass/_common.scss
@@ -474,7 +474,7 @@ code,pre,tt {
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
     display: inline;
-    border: 1px solid #cf5d56;
+    border: 1px solid #a572f4;
     border-radius: 32px;
     line-height: 28px;
     padding: 0 10px 0 10px;
