--- a/_sass/_common.scss
+++ b/_sass/_common.scss
@@ -506,7 +506,7 @@ code,pre,tt {
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
     display: inline-block;
-    background-color: #cf5d56;
+    background-color: #a572f4;
     border-radius: 32px;
     line-height: 28px;
     padding: 0 10px 0 10px;
@@ -531,14 +531,14 @@ code,pre,tt {
 .blog-tags .tags-list h4{
     transition: color .3s;
     margin-bottom: 2px;
-    color: #c8463e
+    color: #a572f4
 }
 
 .blog-tags .tags-list small {
     text-transform: uppercase;
     font-family: bryant;
     margin: 0.5em;
-    color: #bf8e82;
+    color: #a572f4;
 }
 
 .blog-tags .tags-list p {
