--- a/_sass/_common.scss
+++ b/_sass/_common.scss
@@ -484,7 +484,7 @@ code,pre,tt {
 }
 
 .post-tags .tags-list a:hover {
-    background-color: #af3d36;
+    background-color: #a572f4;
     color: #fff!important
 }
 
