--- a/_sass/_common.scss
+++ b/_sass/_common.scss
@@ -14,6 +14,24 @@
     font-weight: 700
 }
 
+.video-responsive {
+position: relative;
+padding-bottom: 56.25%; /* 16/9 ratio */
+padding-top: 30px; /* IE6 workaround*/
+height: 0;
+overflow: hidden;
+}
+
+.video-responsive iframe,
+.video-responsive object,
+.video-responsive embed {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+}
+
 html {
     font-family: sans-serif;
     -ms-text-size-adjust: 100%;
