--- a/_sass/_blog-index.scss
+++ b/_sass/_blog-index.scss
@@ -5,10 +5,10 @@
 
 .blog-year {
     margin: 2rem 0 1rem;
-    border-top: 1px solid #bf8e82;
-    border-bottom: 1px solid #bf8e82;
+    border-top: 1px solid #a572f4;
+    border-bottom: 1px solid #a572f4;
     padding: 4px;
-    color: #c8463e;
+    color: #a572f4;
     font-family: moniker;
     font-weight: 700
 }
