--- a/_sass/_common.scss
+++ b/_sass/_common.scss
@@ -534,7 +534,7 @@ code,pre,tt {
 }
 
 .blog-tags .tags-cloud a:hover {
-    background-color: #af3d36;
+    background-color: #a572f4;
     color: #fff!important
 }
 
