--- a/_sass/_common.scss
+++ b/_sass/_common.scss
@@ -847,7 +847,7 @@ code,pre,tt {
     margin-top: 14px;
     margin-bottom: 24px;
     border-bottom: 1px solid #a572f4;
-    background-image: linear-gradient(180deg,#fff,#fbefeb);
+    background-image: linear-gradient(180deg,#fff,#f8cffa);
     background-repeat: no-repeat;
     background-position: 0 28px;
     box-sizing: border-box
